--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<h2>A propos</h2>
 		
 					<p class="about">L'idée de ce projet nous est venu du constat suivant : <strong>les personnes en situation de handicap doivent toujours s'adapter aux produits qui leurs sont proposés</strong>. Les gammes sont souvent restreinte et ne correspondent donc pas à leurs attentes en termes de fonctionnalités ou de style. </p>
-					<p class="about">Nous chercons donc à <strong>caser les codes</strong> du <em>"moche mais pratique"</em> ou du <em>"stylé mais inadapté" </em> proposant aux utilisateurs eux-même ne nous donner un cahier des charges de leur matériel médical de leurs rêves, qu'il ne trouve pas en magasin spécialisé</p>
+					<p class="about">Nous chercons donc à <strong>casser les codes</strong> du <em>"moche mais pratique"</em> ou du <em>"stylé mais inadapté" </em> proposant aux utilisateurs eux-même ne nous donner un cahier des charges de leur matériel médical de leurs rêves, qu'il ne trouve pas en magasin spécialisé</p>
 		</div>
 
 
